--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/index.css"/>
     <link rel="stylesheet" href="css/footer.css"/>
     <link rel="stylesheet" href="css/nav.css"/>
+    <link rel="stylesheet" href="css/styles.css">
     <script src="lib/jquery/jquery-2.2.4.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="lib/jquery.localize.js" type="text/javascript"></script>
@@ -19,24 +20,35 @@
     <script src="js/switchLan.js" type="text/javascript"></script>
 </head>
 <body>
-    <div class="navWrap">
-        <div class="nav">
-            <div class="logo"><img src="images/logo_header_other@2x.png"/></div>
-            <ul class="navigation">
-                <li class="active"><a target="_blank" href="whitePaper/htc-whitePaper-zh.pdf" data-localize="nav.menu1">白皮书</a></li>
-                <li><a href="html/solution.html"  data-localize="nav.menu2">解决方案</a></li>
-                <li><a href="html/news.html"  data-localize="nav.menu3">新闻</a></li>
-                <li><a href="html/qa.html"  data-localize="nav.menu4">常见问题</a></li>
-                <li><a href="html/contractUs.html"  data-localize="nav.menu5">联系我们</a></li>
-                <li class="language">
-                    <img src="images/icon_flag_china@2x.png" data-localize="nav.icon"/><a href="#"  data-localize="nav.menu6">简体中文</a>
-                    <ul>
-                        <li class="zh"><img src="images/icon_flag_china@2x.png"/><a>简体中文</a></li>
-                        <li class="en"><img src="images/icon_flag_eng@2x.png"/><a>English</a></li>
-                        <li class="jp"><img src="images/icon_flag_Jap@2x.png"/><a>日本語</a></li>
-                    </ul>
-                </li>
-            </ul>
+    <div class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#coll3">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="#" class="navbar-brand">
+                    <img src="images/logo_header_other@2x.png"/>
+                </a>
+            </div>
+            <div class="collapse navbar-collapse" id="coll3">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active"><a target="_blank" href="whitePaper/htc-whitePaper-zh.pdf" data-localize="nav.menu1">白皮书</a></li>
+                    <li><a href="html/solution.html"  data-localize="nav.menu2">解决方案</a></li>
+                    <li><a href="html/news.html"  data-localize="nav.menu3">新闻</a></li>
+                    <li><a href="html/qa.html"  data-localize="nav.menu4">常见问题</a></li>
+                    <li><a href="html/contractUs.html"  data-localize="nav.menu5">联系我们</a></li>
+                    <li class="language">
+                        <img src="images/icon_flag_china@2x.png" data-localize="nav.icon"/><a href="#"  data-localize="nav.menu6">简体中文</a>
+                        <ul>
+                            <li class="zh"><img src="images/icon_flag_china@2x.png"/><a>简体中文</a></li>
+                            <li class="en"><img src="images/icon_flag_eng@2x.png"/><a>English</a></li>
+                            <li class="jp"><img src="images/icon_flag_Jap@2x.png"/><a>日本語</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <div class="banner">
