--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/footer.css"/>
     <link rel="stylesheet" href="css/nav.css"/>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/media.css">
     <script src="lib/jquery/jquery-2.2.4.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="lib/jquery.localize.js" type="text/javascript"></script>
@@ -52,6 +53,7 @@
             </div>
         </div>
     </div>
+    <article>
     <div class="banner">
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
@@ -99,87 +101,92 @@
             </div>
         </div>
     </div>
-
+    </article>
     <div class="adv_Tar">
-        <div class="advantage">
-            <div class="img">
-                <img src="images/icon_adv@2x.png"/>
-            </div>
-            <div class="des">
-                <h2 data-localize="advantage.title">什么是HealthTrace</h2>
-                <p data-localize="advantage.desc">HealthTrace是集IOT物联网与区块链技术为一体的产品信息溯源平台</p>
+        <div class="advantage container">
+            <div class="row">
+                <div class="img col-md-6 col-sm-12">
+                    <img src="images/icon_adv@2x.png"/>
+                </div>
+                <div class="des col-md-6 col-sm-12">
+                    <h2 data-localize="advantage.title">什么是HealthTrace</h2>
+                    <p data-localize="advantage.desc">HealthTrace是集IOT物联网与区块链技术为一体的产品信息溯源平台</p>
+                </div>
             </div>
         </div>
-        <div class="target">
-            <div class="des">
-                <h2 data-localize="target.title">HealthTrace的目标</h2>
-                <p data-localize="target.desc">HealthTrace的目标是利用IOT与区块链技术，构建一个可信任的安全食品质量监督生态网</p>
-            </div>
-            <div class="img" style="">
-                <img src="images/icon_goal@2x.png"/>
+        <div class="target container">
+            <div class="row">
+                <div class="des col-md-6 col-sm-12">
+                    <h2 data-localize="target.title">HealthTrace的目标</h2>
+                    <p data-localize="target.desc">HealthTrace的目标是利用IOT与区块链技术，构建一个可信任的安全食品质量监督生态网</p>
+                </div>
+                <div class="img col-md-6 col-sm-12">
+                    <img src="images/icon_goal@2x.png"/>
+                </div>
             </div>
         </div>
     </div>
 
     <div class="whyUsWrap">
-        <div class="whyUs">
+        <div class="whyUs container">
             <h3 data-localize="whyUs.title">为什么选择HealthTrace</h3>
-            <div class="list">
-                <div class="item">
-                    <div><img src="images/icon_choose1@2x.png"/></div>
-                    <p data-localize="whyUs.list.des1">专注做食品安全行业<br/>为客户量身定做溯源方案</p>
-                </div>
-                <div class="item">
-                    <div><img src="images/icon_choose2@2x.png"/></div>
-                    <p data-localize="whyUs.list.des2">创造食品安全产业生态链<br/>提升商业效率</p>
-                </div>
-                <div class="item">
-                    <div><img src="images/icon_choose3@2x.png"/></div>
-                    <p data-localize="whyUs.list.des3">拥有上市公司做背书</p>
-                </div>
-                <div class="item">
-                    <div><img src="images/icon_choose4@2x.png"/></div>
-                    <p data-localize="whyUs.list.des4">多家金融机构以及知名人员站台</p>
+            <div class="list container">
+                <div class="row">
+                    <div class="item col-lg-3 col-sm-6 col-xs-12">
+                        <div><img src="images/icon_choose1@2x.png"/></div>
+                        <p data-localize="whyUs.list.des1">专注做食品安全行业<br/>为客户量身定做溯源方案</p>
+                    </div>
+                    <div class="item col-lg-3 col-sm-6 col-xs-12">
+                        <div><img src="images/icon_choose2@2x.png"/></div>
+                        <p data-localize="whyUs.list.des2">创造食品安全产业生态链<br/>提升商业效率</p>
+                    </div>
+                    <div class="item col-lg-3 col-sm-6 col-xs-12">
+                        <div><img src="images/icon_choose3@2x.png"/></div>
+                        <p data-localize="whyUs.list.des3">拥有上市公司做背书</p>
+                    </div>
+                    <div class="item col-lg-3 col-sm-6 col-xs-12">
+                        <div><img src="images/icon_choose4@2x.png"/></div>
+                        <p data-localize="whyUs.list.des4">多家金融机构以及知名人员站台</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-
     <div class="memberWrap">
-        <div class="member">
+        <div class="member container">
             <div class="title">
                 <h3 data-localize="member.title">团队成员</h3>
                 <div class="sec-title" data-localize="member.secTitle">TEAM MEMBER</div>
             </div>
-            <div class="list">
-                <div class="item">
+            <div class="list row">
+                <div class="item col-md-4 col-sm-12">
                     <div><img src="images/pic_team1@2x.png"/></div>
                     <h4 data-localize="member.list.person1.name">John Wu</h4>
                     <div class="job" data-localize="member.list.person1.job">CEO</div>
                     <p data-localize="member.list.person1.info">澳大利亚资深注册会计师、英国皇家资深特许管理会计师、全球资深特许管理会计师。曾在多个跨国公司担任财务要职。现担任澳洲注册会计师协会专职顾问。</p>
                 </div>
-                <div class="item">
+                <div class="item col-md-4 col-sm-12">
                     <div><img src="images/pic_team2@2x.png"/></div>
                     <h4 data-localize="member.list.person2.name">Brad Fornby</h4>
                     <div class="job" data-localize="member.list.person2.job">CTO</div>
                     <p data-localize="member.list.person2.info">澳大利亚金融科技成员，联合领导其区块链小组委员会。专注区块链和金融服务领域。拥有超过18年信息技术超过10年金融服务技术从业经验。</p>
                 </div>
-                <div class="item">
+                <div class="item col-md-4 col-sm-12">
                     <div><img src="images/pic_team3@2x.png"/></div>
                     <h4 data-localize="member.list.person3.name">Jessie Tao</h4>
                     <div class="job" data-localize="member.list.person3.job">CFO</div>
                     <p data-localize="member.list.person3.info">注册会计师、税务合伙人。超过10年四大会计事务所从业经验。拥有众多行业外部审计经验。擅长外部报告、财务分析、税务及法务合规等方面的专业服务。</p>
                 </div>
             </div>
-            <div class="list list2">
-                <div class="item">
+            <div class="list list2 row">
+                <div class="item col-md-6 col-sm-12">
                     <div><img src="images/pic_team4@2x.png"/></div>
                     <h4 data-localize="member.list.person4.name">Jeremy Everett</h4>
                     <div class="job" data-localize="member.list.person4.job">HTC区块链工程师</div>
                     <p data-localize="member.list.person1.info">区块链技术的早期关注者，在区块链技术方面有丰富的经验。 目前任职于Pushpay公司并曾在威廉达蒙控股集团担任业务系统分析师曾在DVDESING公司担任IT董事达9年。</p>
                 </div>
-                <div class="item">
+                <div class="item col-md-6 col-sm-12">
                     <div><img src="images/pic_team5@2x.png"/></div>
                     <h4 data-localize="member.list.person5.name">Tom Henderson</h4>
                     <div class="job" data-localize="member.list.person5.job">HTC核心架构师</div>
@@ -296,26 +303,27 @@
             </div>
         </div>
     </div>
+
     <div class="partnerWrap">
-        <div class="partner">
+        <div class="partner container">
             <div class="title">
                 <h3 data-localize="partner.title">企业支持</h3>
                 <div class="sec-title" data-localize="partner.secTitle">COOPERATION PARTNER</div>
             </div>
-            <div class="list">
-                <div class="item">
+            <div class="list row">
+                <div class="item col-md-4 col-sm-6 col-xs-12">
                     <div><img src="images/pic_partner_1@2x.png"/></div>
                 </div>
-                <div class="item">
+                <div class="item col-md-4 col-sm-6 col-xs-12">
                     <div><img src="images/pic_partner_2@2x.png"/></div>
                 </div>
-                <div class="item">
+                <div class="item col-md-4 col-sm-6 col-xs-12">
                     <div><img src="images/pic_partner_3@2x.png"/></div>
                 </div>
-                <div class="item">
+                <div class="item col-md-4 col-sm-6 col-xs-12">
                     <div><img style="width: 370px;" src="images/pic_partner_4@2x.png"/></div>
                 </div>
-                <div class="item">
+                <div class="item col-md-4 col-sm-6 col-xs-12">
                     <div><img src="images/pic_partner_5@2x.png"/></div>
                 </div>
             </div>
@@ -323,13 +331,13 @@
     </div>
 
     <div class="newsWrap">
-        <div class="news">
+        <div class="news container">
             <div class="title">
                 <h3 data-localize="news.title">新闻</h3>
                 <div class="sec-title" data-localize="news.secTitle">NEWS</div>
             </div>
-            <div class="list">
-                <div class="item">
+            <div class="list row">
+                <div class="item col-md-6 col-sm-12">
                     <div class="left">
                         <div class="day">03</div>
                         <div class="month">January</div>
@@ -340,7 +348,7 @@
                         <!--<a class="detail"  data-localize="news.list.item1.link">查看报道</a>-->
                     </div>
                 </div>
-                <div class="item">
+                <div class="item col-md-6 col-sm-12">
                     <div class="left">
                         <div class="day">03</div>
                         <div class="month">January</div>
@@ -354,30 +362,34 @@
             </div>
         </div>
     </div>
+
     <div class="footer">
-        <div class="contact">
-            <div class="left">
-                <p data-localize="contact.phone">电话：+61 412 927 796</p>
-                <p data-localize="contact.email">邮箱：webmaster@jaz-intl.com</p>
-                <p data-localize="contact.adress">地址：9A/139 Minjungbal Drive Tweed Heads South NSW 2486 Australia</p>
-            </div>
-            <div class="right">
-                <p>
-                    <a target="_blank" href="https://github.com/HealthTrace" class="github"></a>
-                    <a class="telegram"></a>
-                    <a class="wechat"></a>
-                    <a class="twitter"></a>
-                    <a class="facebook"></a>
-                </p>
+        <div class="contact container">
+            <div class="row">
+                <div class="left col-sm-6 col-xs-12">
+                    <p data-localize="contact.phone">电话：+61 412 927 796</p>
+                    <p data-localize="contact.email">邮箱：webmaster@jaz-intl.com</p>
+                    <p data-localize="contact.adress">地址：9A/139 Minjungbal Drive Tweed Heads South NSW 2486 Australia</p>
+                </div>
+                <div class="right col-sm-6 col-xs-12">
+                    <p>
+                        <a target="_blank" href="https://github.com/HealthTrace" class="github"></a>
+                        <a class="telegram"></a>
+                        <a class="wechat"></a>
+                        <a class="twitter"></a>
+                        <a class="facebook"></a>
+                    </p>
+                </div>
             </div>
         </div>
         <div class="divide"></div>
-        <div class="copyright">
+        <div class="copyright container">
             <div class="logoBottom"><img src="images/logo_bottom@2x.png"></div>
             <p>COPYRIGHT (©) 2018 HealthTrace</p>
         </div>
     </div>
     <div class="goTop"></div>
+
     <script src="js/slide.min.js"></script>
     <script>
         $(document).ready(function () {
