--- a/html/roadmap.html
+++ b/html/roadmap.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../css/tabs.css"/>
     <link rel="stylesheet" href="../css/solutionBlock.css">
     <link rel="stylesheet" href="../css/footer.css"/>
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/media.css">
     <script src="../bodymovin/lottie.min.js"></script>
     <script src="../lib/jquery/jquery-2.2.4.min.js"></script>
     <script src="../js/tabs.js"></script>
@@ -24,52 +26,65 @@
     setTitle("roadmap")
 </script>
 <body>
-<div class="navWrap">
-    <div class="nav">
-        <div class="logo"><a href="../index.html"><img src="../images/logo_header_other@2x.png"/></a></div>
-        <ul class="navigation">
-            <li><a target="_blank" href="../whitePaper/htc-whitePaper-zh.pdf" data-localize="nav.menu1">白皮书</a></li>
-            <li class="active"><a href="solution.html"  data-localize="nav.menu2">解决方案</a></li>
-            <li><a href="news.html"  data-localize="nav.menu3">新闻</a></li>
-            <li><a href="qa.html"  data-localize="nav.menu4">常见问题</a></li>
-            <li><a href="contractUs.html"  data-localize="nav.menu5">联系我们</a></li>
-            <li class="language">
-                <img src="../images/icon_flag_china@2x.png"  data-localize="nav.icon_other"/><a href="#"  data-localize="nav.menu6">简体中文</a>
-                <ul>
-                    <li class="zh"><img src="../images/icon_flag_china@2x.png"/><a>简体中文</a></li>
-                    <li class="en"><img src="../images/icon_flag_eng@2x.png"/><a>English</a></li>
-                    <li class="jp"><img src="../images/icon_flag_Jap@2x.png"/><a>日本語</a></li>
-                </ul>
-            </li>
-        </ul>
+<div class="navbar navbar-default">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#coll3">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="../index.html" class="navbar-brand">
+                <img src="../images/logo_header_other@2x.png"/>
+            </a>
+        </div>
+        <div class="collapse navbar-collapse" id="coll3">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a target="_blank" href="../whitePaper/htc-whitePaper-zh.pdf" data-localize="nav.menu1">白皮书</a></li>
+                <li class="active"><a href="../html/solution.html"  data-localize="nav.menu2">解决方案</a></li>
+                <li><a href="../html/news.html"  data-localize="nav.menu3">新闻</a></li>
+                <li><a href="../html/qa.html"  data-localize="nav.menu4">常见问题</a></li>
+                <li><a href="../html/contractUs.html"  data-localize="nav.menu5">联系我们</a></li>
+                <li class="language">
+                    <img src="../images/icon_flag_china@2x.png" data-localize="nav.icon_other"/><a href="#"  data-localize="nav.menu6">简体中文</a>
+                    <ul>
+                        <li class="zh"><img src="../images/icon_flag_china@2x.png"/><a>简体中文</a></li>
+                        <li class="en"><img src="../images/icon_flag_eng@2x.png"/><a>English</a></li>
+                        <li class="jp"><img src="../images/icon_flag_Jap@2x.png"/><a>日本語</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
 
-<div class="tabs">
-    <div class="item">
-        <a href="description.html" class="img" id="bodymovin1"></a>
-        <span class="text" data-localize="tabs.item1">项目描述</span>
-    </div>
+<div class="tabs container">
+    <div class="row">
+        <div class="item col-lg-2 col-sm-4 col-xs-6">
+            <a href="description.html" class="img" id="bodymovin1"></a>
+            <span class="text" data-localize="tabs.item1">项目描述</span>
+        </div>
 
-    <div class="item">
-        <a href="solution.html" class="img" id="bodymovin2"></a>
-        <span class="text" data-localize="tabs.item2">行业解决方案</span>
-    </div>
-    <div class="item">
-        <a href="roadmap.html" class="img" id="bodymovin3"></a>
-        <span class="text active" data-localize="tabs.item3">技术路线</span>
-    </div>
-    <div class="item">
-        <a href="video.html" class="img" id="bodymovin4"></a>
-        <span class="text" data-localize="tabs.item4">小视频</span>
-    </div>
-    <div class="item">
-        <a href="distribute.html" class="img" id="bodymovin5"></a>
-        <span class="text" data-localize="tabs.item5">分配计划</span>
-    </div>
-    <div class="item">
-        <a href="prospects.html" class="img" id="bodymovin6"></a>
-        <span class="text" data-localize="tabs.item6">发展前景</span>
+        <div class="item col-lg-2 col-sm-4 col-xs-6">
+            <a href="solution.html" class="img" id="bodymovin2"></a>
+            <span class="text" data-localize="tabs.item2">行业解决方案</span>
+        </div>
+        <div class="item col-lg-2 col-sm-4 col-xs-6">
+            <a href="roadmap.html" class="img" id="bodymovin3"></a>
+            <span class="text active" data-localize="tabs.item3">技术路线</span>
+        </div>
+        <div class="item col-lg-2 col-sm-4 col-xs-6">
+            <a href="video.html" class="img" id="bodymovin4"></a>
+            <span class="text" data-localize="tabs.item4">小视频</span>
+        </div>
+        <div class="item col-lg-2 col-sm-4 col-xs-6">
+            <a href="distribute.html" class="img" id="bodymovin5"></a>
+            <span class="text" data-localize="tabs.item5">分配计划</span>
+        </div>
+        <div class="item col-lg-2 col-sm-4 col-xs-6">
+            <a href="prospects.html" class="img" id="bodymovin6"></a>
+            <span class="text" data-localize="tabs.item6">发展前景</span>
+        </div>
     </div>
 </div>
 
@@ -80,7 +95,7 @@
     </div>
 </div>
 
-<div class="timeAxis">
+<div class="timeAxis container">
     <div class="left">
         <div class="date">2017.9.20</div>
         <div class="event">
@@ -141,27 +156,88 @@
         <div class="date">2019.03.30</div>
     </div>
 </div>
-
+<div class="timeAxis-sm container">
+    <ul>
+        <li>
+            <div class="date">2017.9.20</div>
+            <div class="event">
+                <img src="../images/bojun@2x.png">
+                <span data-localize="roadmap.item1">与博君农业达成战略合作</span>
+            </div>
+        </li>
+        <li>
+            <div class="date">2017.9.30</div>
+            <div class="event">
+                <img src="../images/tianmei@2x.png">
+                <span data-localize="roadmap.item2">与天美公司达成战略合作</span>
+            </div>
+        </li>
+        <li>
+            <div class="date">2017.12.23</div>
+            <div class="event">
+                <img src="../images/icon_test@2x.png">
+                <span data-localize="roadmap.item3">技术框架搭建测试</span>
+            </div>
+        </li>
+        <li>
+            <div class="date">2017.12.15</div>
+            <div class="event">
+                <img src="../images/FileAccess@2x.png">
+                <span data-localize="roadmap.item4">白皮书完成</span>
+            </div>
+        </li>
+        <li>
+            <div class="date">2018.01.13</div>
+            <div class="event">
+                <img src="../images/UnstructuredInformation@2x.png">
+                <span data-localize="roadmap.item5">开始筹备项目推广</span>
+            </div>
+        </li>
+        <li>
+            <div class="date">2018.05.15</div>
+            <div class="event">
+                <img src="../images/FileSystem@2x.png">
+                <span data-localize="roadmap.item6">向公众展示白皮书</span>
+            </div>
+        </li>
+        <li>
+            <div class="date">2018.12.30</div>
+            <div class="event">
+                <img src="../images/DomainRegistration@2x.png">
+                <span data-localize="roadmap.item7">测试网上线</span>
+            </div>
+        </li>
+        <li>
+            <div class="date">2019.03.30</div>
+            <div class="event">
+                <img src="../images/icon_web@2x.png">
+                <span data-localize="roadmap.item8">主网正式上线</span>
+            </div>
+        </li>
+    </ul>
+</div>
 
 <div class="footer">
-    <div class="contact">
-        <div class="left">
-            <p data-localize="contact.phone">电话：+61 412 927 796</p>
-            <p data-localize="contact.email">邮箱：webmaster@jaz-intl.com</p>
-            <p data-localize="contact.adress">地址：9A/139 Minjungbal Drive Tweed Heads South NSW 2486 Australia</p>
-        </div>
-        <div class="right">
-            <p>
-                <a target="_blank" href="https://github.com/HealthTrace" class="github"></a>
-                <a class="telegram"></a>
-                <a class="wechat"></a>
-                <a class="twitter"></a>
-                <a class="facebook"></a>
-            </p>
+    <div class="contact container">
+        <div class="row">
+            <div class="left col-sm-6 col-xs-12">
+                <p data-localize="contact.phone">电话：+61 412 927 796</p>
+                <p data-localize="contact.email">邮箱：webmaster@jaz-intl.com</p>
+                <p data-localize="contact.adress">地址：9A/139 Minjungbal Drive Tweed Heads South NSW 2486 Australia</p>
+            </div>
+            <div class="right col-sm-6 col-xs-12">
+                <p>
+                    <a target="_blank" href="https://github.com/HealthTrace" class="github"></a>
+                    <a class="telegram"></a>
+                    <a class="wechat"></a>
+                    <a class="twitter"></a>
+                    <a class="facebook"></a>
+                </p>
+            </div>
         </div>
     </div>
     <div class="divide"></div>
-    <div class="copyright">
+    <div class="copyright container">
         <div class="logoBottom"><img src="../images/logo_bottom@2x.png"></div>
         <p>COPYRIGHT (©) 2018 HealthTrace</p>
     </div>
