--- a/html/contractUs.html
+++ b/html/contractUs.html
@@ -6,10 +6,7 @@
     <title></title>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../css/reset.css"/>
-    <link rel="stylesheet" href="../css/nav.css"/>
-    <link rel="stylesheet" href="../css/contractUs.css">
-    <link rel="stylesheet" href="../css/footer.css"/>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/media.css">
     <script src="../lib/jquery/jquery-2.2.4.min.js"></script>
@@ -54,7 +51,7 @@
     </div>
 </div>
 
-<div class="contractUs container">
+<div class="contractUs container head-top">
     <div class="title">
         <h3 data-localize="contactUs.title">联系我们</h3>
         <div class="sec-title" data-localize="contactUs.secTitle">Contact Us</div>
