--- a/html/fruit.html
+++ b/html/fruit.html
@@ -6,10 +6,7 @@
     <title></title>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../css/reset.css"/>
-    <link rel="stylesheet" href="../css/nav.css"/>
-    <link rel="stylesheet" href="../css/originPage.css">
-    <link rel="stylesheet" href="../css/footer.css"/>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/media.css">
     <script src="../lib/jquery/jquery-2.2.4.min.js"></script>
@@ -55,7 +52,7 @@
 </div>
 
 
-<div class="originBlock container">
+<div class="originBlock container head-top">
     <div class="desc">
         <div class="title" data-localize="fruitPage.title">果蔬汁饮料供应链溯源</div>
         <p data-localize="fruitPage.summary">果蔬汁饮料行业食品安全问题的频频发生给我们敲响了警钟。果蔬汁饮料行业的产业链较长，产品添加元素较多，难以跟踪保证所有环节的质量安全，这是 影响饮料质量与安全的最主要因素。因此，果蔬汁饮料行业急需可全产业链跟踪 的产品溯源技术。</p>
