--- a/html/mediaTrade.html
+++ b/html/mediaTrade.html
@@ -6,10 +6,7 @@
     <title></title>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../css/reset.css"/>
-    <link rel="stylesheet" href="../css/nav.css"/>
-    <link rel="stylesheet" href="../css/originPage.css">
-    <link rel="stylesheet" href="../css/footer.css"/>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/media.css">
     <script src="../lib/jquery/jquery-2.2.4.min.js"></script>
@@ -54,7 +51,7 @@
     </div>
 </div>
 
-<div class="originBlock container">
+<div class="originBlock container head-top">
     <div class="desc">
         <div class="title" data-localize="mediaPage.title">多媒体商贸溯源</div>
         <p data-localize="mediaPage.summary">HealthTrace未来不仅可用于健康食品的溯源追踪，其适用范围涵盖整个制造业。HealthTrace下一步计划进军网络安全领域，其中澳洲上市公司WONHE Multimedia Commerce Ltd已有初步合作意向。</p>
