--- a/html/news.html
+++ b/html/news.html
@@ -6,11 +6,7 @@
     <title></title>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../css/reset.css"/>
-    <link rel="stylesheet" href="../css/nav.css"/>
-    <link rel="stylesheet" href="../css/news.css">
-    <link rel="stylesheet" href="../css/solutionBlock.css">
-    <link rel="stylesheet" href="../css/footer.css"/>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/media.css">
     <script src="../lib/jquery/jquery-2.2.4.min.js"></script>
@@ -56,7 +52,7 @@
 </div>
 
 
-<div class="news solutionBlock container">
+<div class="news solutionBlock container head-top">
     <div class="title">
         <h3 data-localize="news.title">新闻</h3>
         <div class="sec-title" data-localize="news.secTitle">NEWS</div>
