--- a/html/newsDetail.html
+++ b/html/newsDetail.html
@@ -6,10 +6,7 @@
     <title></title>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../css/reset.css"/>
-    <link rel="stylesheet" href="../css/nav.css"/>
-    <link rel="stylesheet" href="../css/news.css">
-    <link rel="stylesheet" href="../css/footer.css"/>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/media.css">
     <script src="../lib/jquery/jquery-2.2.4.min.js"></script>
@@ -51,7 +48,7 @@
     </div>
 </div>
 
-<div class="news-detail container">
+<div class="news-detail container head-top">
     <h5></h5>
     <h6></h6>
     <div class="rich-text">
