--- a/html/water.html
+++ b/html/water.html
@@ -6,10 +6,7 @@
     <title></title>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../css/reset.css"/>
-    <link rel="stylesheet" href="../css/nav.css"/>
-    <link rel="stylesheet" href="../css/originPage.css"/>
-    <link rel="stylesheet" href="../css/footer.css"/>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/media.css">
     <script src="../lib/jquery/jquery-2.2.4.min.js"></script>
@@ -55,7 +52,7 @@
 </div>
 
 
-<div class="originBlock container">
+<div class="originBlock container head-top">
     <div class="desc">
         <div class="title" data-localize="waterPage.title">瓶装水供应链溯源</div>
         <p data-localize="waterPage.summary">瓶装水行业的质量安全问题日益严峻，出现在瓶装水市场中的一些安全问题一般源于水源污染、瓶装容器不合格、厂家无自检、假冒伪劣产品及质量标准不统一等问题。如何做到诚信、安全、信息透明，是瓶装水行业亟待解决的问题。</p>
