--- a/html/prospects.html
+++ b/html/prospects.html
@@ -6,11 +6,7 @@
     <title></title>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../css/reset.css"/>
-    <link rel="stylesheet" href="../css/nav.css"/>
-    <link rel="stylesheet" href="../css/tabs.css"/>
-    <link rel="stylesheet" href="../css/solutionBlock.css">
-    <link rel="stylesheet" href="../css/footer.css"/>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/media.css">
     <script src="../bodymovin/lottie.min.js"></script>
@@ -57,7 +53,7 @@
     </div>
 </div>
 
-<div class="tabs container">
+<div class="tabs container head-top">
     <div class="row">
         <div class="item col-lg-2 col-sm-4 col-xs-6">
             <a href="description.html" class="img" id="bodymovin1"></a>
