--- a/html/qa.html
+++ b/html/qa.html
@@ -6,10 +6,7 @@
     <title></title>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../css/reset.css"/>
-    <link rel="stylesheet" href="../css/nav.css"/>
-    <link rel="stylesheet" href="../css/qa.css">
-    <link rel="stylesheet" href="../css/footer.css"/>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/media.css">
     <script src="../lib/jquery/jquery-2.2.4.min.js"></script>
@@ -53,7 +50,7 @@
         </div>
     </div>
 </div>
-    <div class="qaWrap">
+    <div class="qaWrap head-top">
         <div class="qa container">
             <div class="title">
                 <h3 data-localize="qa.title">常见问题</h3>
