--- a/html/roadmap.html
+++ b/html/roadmap.html
@@ -6,12 +6,8 @@
     <title></title>
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../lib/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../css/reset.css"/>
-    <link rel="stylesheet" href="../css/nav.css"/>
-    <link rel="stylesheet" href="../css/tabs.css"/>
-    <link rel="stylesheet" href="../css/solutionBlock.css">
-    <link rel="stylesheet" href="../css/footer.css"/>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/media.css">
     <script src="../bodymovin/lottie.min.js"></script>
     <script src="../lib/jquery/jquery-2.2.4.min.js"></script>
@@ -58,7 +54,7 @@
     </div>
 </div>
 
-<div class="tabs container">
+<div class="tabs container head-top">
     <div class="row">
         <div class="item col-lg-2 col-sm-4 col-xs-6">
             <a href="description.html" class="img" id="bodymovin1"></a>
