--- a/index.html
+++ b/index.html
@@ -6,13 +6,9 @@
     <title>HealthTrace</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/slide.css"/>
-    <link rel="stylesheet" href="css/index.css"/>
-    <link rel="stylesheet" href="css/footer.css"/>
-    <link rel="stylesheet" href="css/nav.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/media.css">
     <script src="lib/jquery/jquery-2.2.4.min.js"></script>
@@ -53,8 +49,7 @@
             </div>
         </div>
     </div>
-    <article>
-    <div class="banner">
+    <div class="banner head-top">
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
@@ -101,7 +96,7 @@
             </div>
         </div>
     </div>
-    </article>
+
     <div class="adv_Tar">
         <div class="advantage container">
             <div class="row">
