--- a/index.html
+++ b/index.html
@@ -50,43 +50,41 @@
         </div>
     </div>
     <div class="banner head-top">
-        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            <!-- Indicators -->
+        <div class="carousel slide" id="car">
             <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                <!--data-slide-to="index"控制点和轮播子元素的index相对应-->
+                <li class="active" data-target="#car" data-slide-to="0"></li>
+                <li data-target="#car" data-slide-to="1"></li>
+                <li data-target="#car" data-slide-to="2"></li>
+                <li data-target="#car" data-slide-to="3"></li>
             </ol>
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
+            <div class="carousel-inner in">
                 <div class="item active">
-                    <img src="images/banner_1@2x.jpg" alt="HealthTrace">
-                    <div class="carousel-caption">
+                    <img src="images/banner_1@2x.jpg" alt="1"/>
+                    <div class="carousel-caption" style="text-align: center;">
                         <div><img src="images/logo_big@2x.png"/></div>
-                        <p data-localize="banner.banner1.des">HealthTrace是集IOT物联网与区块链技术为一体的产品信息溯源平台</p>
+                        <p data-localize="banner.banner1.des" style="color: #8c8c8c;">HealthTrace是集IOT物联网与区块链技术为一体的产品信息溯源平台</p>
                         <a class="btn-custom" target="_blank" href="whitePaper/htc-whitePaper-zh.pdf" data-localize="banner.banner1.link">查看白皮书</a>
                     </div>
                 </div>
-                <div class="item alignLeft">
-                    <img src="images/banner_2@2x.jpg" alt="HTC区块链浏览器">
+                <div class="item">
+                    <img src="images/banner_2@2x.jpg" alt="2"/>
                     <div class="carousel-caption">
                         <h1 data-localize="banner.banner2.title">HTC区块链浏览器</h1>
                         <p data-localize="banner.banner2.des">下一代去中心化平台</p>
                         <a class="btn-custom"  data-localize="banner.banner2.link">访问浏览器</a>
                     </div>
                 </div>
-                <div class="item alignLeft">
-                    <img src="images/banner_3@2x.jpg" alt="果蔬汁饮料供应链溯源">
+                <div class="item">
+                    <img src="images/banner_3@2x.jpg" alt="3"/>
                     <div class="carousel-caption">
                         <h1 data-localize="banner.banner3.title">果蔬汁饮料供应链溯源</h1>
                         <p data-localize="banner.banner3.des">对果蔬汁饮料行业产业链全过程的溯源管理，解决其产业链较长，难以管理的弊端，保证产品的质量安全</p>
                         <a href="html/fruit.html" class="btn-custom" data-localize="banner.banner3.link">查看案例</a>
                     </div>
                 </div>
-                <div class="item alignLeft">
-                    <img src="images/banner_4@2x.jpg" alt="瓶装水供应链溯源">
+                <div class="item">
+                    <img src="images/banner_4@2x.jpg" alt="4"/>
                     <div class="carousel-caption">
                         <h1 data-localize="banner.banner4.title">瓶装水供应链溯源</h1>
                         <p data-localize="banner.banner4.des">通过对饮用水全产业链的溯源管理，加强对各环节跟踪监测，消除饮用水健康安全隐患</p>
@@ -411,6 +409,10 @@
             $(".goTop").click(function () {
                 $("html,body").animate({scrollTop:0},500,'swing');
             });
+            $('.carousel').carousel({
+                interval:3000
+            });
+
         });
     </script>
 </body>
