--- a/html/news.html
+++ b/html/news.html
@@ -67,7 +67,7 @@
             <h5></h5>
             <h6></h6>
             <p></p>
-            <a href="">查看报道</a>
+            <a href="" data-localize="news.view">查看报道</a>
         </li>
     </ul>
 </div>
