--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     <div><img src="images/pic_partner_3@2x.png"/></div>
                 </div>
                 <div class="item col-md-4 col-sm-6 col-xs-12">
-                    <div><img style="width: 370px;" src="images/pic_partner_4@2x.png"/></div>
+                    <div><img src="images/pic_partner_4@2x.png"/></div>
                 </div>
                 <div class="item col-md-4 col-sm-6 col-xs-12">
                     <div><img src="images/pic_partner_5@2x.png"/></div>
