--- a/html/contractUs.html
+++ b/html/contractUs.html
@@ -52,7 +52,7 @@
 </div>
 
 <div class="contractUs container head-top">
-    <div class="title">
+    <div class="title" style="padding-top: 64px">
         <h3 data-localize="contactUs.title">联系我们</h3>
         <div class="sec-title" data-localize="contactUs.secTitle">Contact Us</div>
     </div>
