--- a/html/news.html
+++ b/html/news.html
@@ -53,7 +53,7 @@
 
 
 <div class="news solutionBlock container head-top">
-    <div class="title">
+    <div class="title" style="padding-top: 64px">
         <h3 data-localize="news.title">新闻</h3>
         <div class="sec-title" data-localize="news.secTitle">NEWS</div>
     </div>
